--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -40,17 +40,22 @@
               </a>    </li>
               <li class="nav-item">
                 <a class="nav-link"
-                routerLink="/user"
+                routerLink="/viewfeedbacks"
                 routerLinkActive="activebutton"
                 ariaCurrentWhenActive="page">
-                <strong>User</strong>
+                <strong>Feedbacks</strong>
                 </a>    </li>
             <li class="nav-item">
               <a class="nav-link" href="**"><strong>Bookings</strong></a>
             </li>
+           
             <li class="nav-item">
-              <a class="nav-link" href="**"><strong>Calendar</strong></a>
-            </li>
+              <a class="nav-link"
+              routerLink="/login1"
+              routerLinkActive="activebutton"
+              ariaCurrentWhenActive="page">
+              <strong>Logout</strong>
+              </a>    </li>
           </ul>
         </div>
       </nav>
