--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -39,14 +39,7 @@
               ariaCurrentWhenActive="page">
               <strong>Booking</strong>
               </a>    </li>
-              <li class="nav-item">
-                <a class="nav-link"
-                routerLink="/calendar"
-                routerLinkActive="activebutton"
-                ariaCurrentWhenActive="page">
-                <strong>Calendar</strong>
-                </a>    </li>
-           
+             
             <li class="nav-item">
               <a class="nav-link"
               routerLink="/feedback"
@@ -61,6 +54,14 @@
                 ariaCurrentWhenActive="page">
                 <strong>Contactus</strong>
                 </a>    </li>
+                <li class="nav-item">
+                  <a class="nav-link"
+                  routerLink="/login2"
+                  routerLinkActive="activebutton"
+                  ariaCurrentWhenActive="page">
+                  <strong>Logout</strong>
+                  </a>    </li>
+             
           </ul>
         </div>
       </nav>
@@ -72,7 +73,7 @@
         <div class="col-lg-6">
           <h1>Let's get the party started.</h1>
           <!-- <i class="fas fa-check-circle fa-4x ia"></i> -->
-           <i class="fas fa-bullhorn fa-3x ic "></i>
+           <i class="fas fa-glass-cheers fa-3x ic "></i>
           
 
         </div>
