--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -38,7 +38,7 @@
 				<div class="d-flex justify-content-center">
 
 
-					<h3 id="form-title"> ADMIN LOGIN</h3>
+					<h3 id="form-title"> USER LOGIN</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form [formGroup]="form" (ngSubmit)="Login()">
@@ -95,11 +95,11 @@
 					</form>
 				</div>
 				<div class="d-flex justify-content-center links">
-					Not an admin?  <a class="button"
-					routerLink="/login2"
+					Don't haven an account?  <a class="button"
+					routerLink="/register"
 					routerLinkActive="activebutton"
 					ariaCurrentWhenActive="page">
-					UserLogin
+					Register
 				  </a>
 				</div>
 
