--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -37,7 +37,12 @@
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="**"><strong>Bookings</strong></a>
+                          <a class="nav-link"
+                          routerLink="/viewbookings"
+                          routerLinkActive="activebutton"
+                          ariaCurrentWhenActive="page">
+                          <strong>Bookings</strong>
+                          </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
