--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -45,9 +45,13 @@
                 ariaCurrentWhenActive="page">
                 <strong>Feedbacks</strong>
                 </a>    </li>
-            <li class="nav-item">
-              <a class="nav-link" href="**"><strong>Bookings</strong></a>
-            </li>
+                <li class="nav-item">
+                  <a class="nav-link"
+                  routerLink="/viewbookings"
+                  routerLinkActive="activebutton"
+                  ariaCurrentWhenActive="page">
+                  <strong>Bookings</strong>
+                  </a>    </li>
            
             <li class="nav-item">
               <a class="nav-link"
