--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -52,6 +52,13 @@
                   ariaCurrentWhenActive="page">
                   <strong>Bookings</strong>
                   </a>    </li>
+                  <li class="nav-item">
+                    <a class="nav-link"
+                    routerLink="/calendaradmin"
+                    routerLinkActive="activebutton"
+                    ariaCurrentWhenActive="page">
+                    <strong>Calendar</strong>
+                    </a>    </li>
            
             <li class="nav-item">
               <a class="nav-link"
