--- a/src/app/login2/login2.component.html
+++ b/src/app/login2/login2.component.html
@@ -94,14 +94,25 @@
 						
 					</form>
 				</div>
+				<p style="padding-left: 77px;"> Don't haven an account?</p>
 				<div class="d-flex justify-content-center links">
-					Don't haven an account?  <a class="button"
+					  
+					<br>
+					<a class="button"
 					routerLink="/register"
 					routerLinkActive="activebutton"
 					ariaCurrentWhenActive="page">
 					Register
 				  </a>
+				  <br>
+				  
 				</div>
+				<a style="padding-left: 105px;" class="button"
+				  routerLink="/updatepassword"
+				  routerLinkActive="activebutton"
+				  ariaCurrentWhenActive="page">
+				  Forgot Password
+				</a>
 
 			</div>
 		</div>
