--- a/src/app/calendaradmin/calendaradmin.component.css
+++ b/src/app/calendaradmin/calendaradmin.component.css
@@ -1,6 +1,5 @@
 body{
     font: Montserrat-black;
-    background-image: url("corporate.jpg") ;
   
   }
   
@@ -12,11 +11,11 @@ body{
   }
   
   .container-fluid{
-    padding: 3% 5.7%;
+    padding: 3% 9%;
   }
   h1{
     font:"Montserrat-black";
-    font-size: 2.3rem;
+    font-size: 2.6rem;
     line-height: 1.5;
     font-weight: 400;
   }
@@ -32,7 +31,7 @@ body{
   }
   .navbar-brand{
     font-family: "Ubuntu";
-    font-size: 3.5rem;
+    font-size:xx-large
     
     
     
@@ -41,7 +40,7 @@ body{
   .nav-link{
     font-size: 1.2rem;
     font-family: "Montserrat-black";
-    color: white;
+    color: #fff;
     /* color: bisque; */
   }
   #navbarSupportedContent{
@@ -61,11 +60,11 @@ body{
     text-align: center;
     padding: 5%;
   }
-  /* .ia{
+  .ia{
     color: #0a668d;
     margin-bottom: 1rem;
   
-  } */
+  }
   
   #intro{
     padding: 50px 10px 10px 10px;
@@ -73,11 +72,14 @@ body{
     font:"Montserrat-black";
     font-weight: bold;
     font-size: 18px;
+  
     
     
     
     
     
-    
+  }
+  th,td{
+      padding: 10px;
   }
   
